<resources>
    <string name="app_name">FoodDelivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="categories">Categories</string>
    <string name="restaurants">Restaurants</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="loginmessage">Login To Your Account</string>
    <string name="haventaccount">Don\'t Have an Account Yet? Click here.</string>
    <string name="orderDetails">Order Details</string>
    <string name="Home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="findFavorite">Find Your Favorite Food</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="adress">Adress</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="signup">Sign up</string>
    <string name="haveaccount">Already have? Login here.</string>
    <string name="signupmessage">Get Ready to Food Rush!</string>

    <string-array name="Cuisines">
        <item>Pizza</item>
        <item>Burger</item>
        <item>Bakery</item>
        <item>Dessert</item>
        <item>Worldwide</item>
        <item>Homemade</item>
        <item>Breakfast</item>
        <item>Kebab</item>
        <item>Pasta - Salad</item>
        <item>Doner</item>
        <item>Seafood</item>
        <item>Eastern Kitchen</item>
    </string-array>
</resources>